src/styles/components/chat/_chat-prompt-wrapper.scss
/* ... */
> .mynah-chat-prompt-input-sticky-card {
    &:not(:empty) {
        padding: var(--mynah-chat-wrapper-spacing);
        background-color: var(--mynah-card-bg);
        border: var(--mynah-border-width) solid var(--mynah-color-border-default);
        border-radius: var(--mynah-input-radius);
        box-sizing: border-box;
        margin: var(--mynah-chat-wrapper-spacing);
        box-shadow: var(--mynah-shadow-card-border);
        width: calc(100% - 2 * var(--mynah-chat-wrapper-spacing));
    }

    > .mynah-chat-item-card {
        max-width: 100%;
        width: 100%;
        > .mynah-card {
            border-bottom-left-radius: 0 !important;
            border: none;
            box-shadow: none;
        }
    }
}

> .mynah-chat-prompt-input-info {
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    box-sizing: border-box;
    overflow: hidden;
    padding: var(--mynah-chat-wrapper-spacing);
    text-align: center;
    flex-shrink: 0;
    color: var(--mynah-color-text-weak);

    &,
    & * {
        font-size: var(--mynah-font-size-xxsmall) !important;
        line-height: 1rem;
    }

    &:empty {
        display: none;
    }

    > * {
        margin: 0;
        margin-block-start: 0;
        margin-block-end: 0;
        margin-top: 0;
        margin-bottom: 0;
        max-width: 100%;
        box-sizing: border-box;
    }
}

@media only screen and (max-height: 450px) {
    > .mynah-chat-prompt-wrapper
        > .mynah-chat-prompt
        > .mynah-chat-prompt-input-wrapper
        > .mynah-chat-prompt-input-inner-wrapper
        > .mynah-chat-prompt-input {
        min-height: var(--mynah-line-height);
        &.empty::before {
            white-space: nowrap;
        }
    }
}

